# platune

./: .actrc  .env  .fossa.yml  .gitignore  .tokeignore  Cargo.toml  Cross.toml  Dockerfile  LICENSE  Makefile.toml  README.md  build.rs  codecov.json  deny.toml  justfile  package-lock.json  package.json  rustfmt.toml  slite.toml
api-old/: Cargo.toml  build.rs
api-old/migrations/2020-04-10-004534_create_folders/: down.sql
api-old/migrations/2020-04-19-031114_user_settings/: up.sql
api-old/migrations/2020-04-24-022802_album_artist/: down.sql
api-old/migrations/2020-04-24-023808_artist/: up.sql
api-old/migrations/2020-04-24-023914_song/: up.sql
api-old/migrations/2020-04-26-011720_import_temp/: up.sql
api-old/migrations/2020-04-26-223119_file_size/: up.sql
api-old/migrations/2020-09-06-011856_tag_datatype/: up.sql
api-old/migrations/2020-09-06-013936_tags/: down.sql
api-old/migrations/2020-09-06-014447_song_tag/: down.sql
api-old/src/server/models/: folder.rs
libplatune/management/: Cargo.toml  build.rs  sqlx-data.json
libplatune/management/assets/mac/: spellfix.dylib
libplatune/management/benches/: bench.rs
libplatune/management/db/schema/: 10-full_text_search.sql  20-views.sql  album.sql  artist.sql  mount.sql
libplatune/management/migrations/: 20210601003344_album_artist.up.sql  20210601003351_album.up.sql  20210601003401_artist.up.sql  20210601004029_mount.up.sql  20210601004434_song.up.sql  20210601004834_full_text_search.down.sql  20210601004834_full_text_search.up.sql  20210617030120_folder.up.sql  20210618030120_full_text_search.down.sql  20210618030120_full_text_search.up.sql  20211107224624_deleted_song.down.sql  20211107224624_deleted_songs.down.sql  20211107224624_deleted_songs.up.sql
libplatune/management/schema/: 10-full_text_search.sql  album.sql  deleted_song.sql  folder.sql  song.sql
libplatune/management/src/: config.rs  config2.rs  consts.rs  database.rs  db_error.rs  entry_type.rs  file_watch_manager.rs  file_watch_manager_test.rs  lib.rs  main.rs  management.udl  manager.rs  manager_test.rs  path_mut.rs  path_util.rs  spellfix.rs  sql_util.rs
libplatune/management/src/config/: config_error.rs  file_config.rs  memory_config.rs  mod.rs
libplatune/management/src/file_watcher/: file_watch_builder.rs  file_watch_error.rs  file_watch_manager.rs  file_watch_manager_test.rs  file_watch_service.rs  mod.rs
libplatune/management/src/search/: mod.rs  queries.rs  result_score.rs  search_engine.rs  search_entry.rs  search_options.rs  search_result.rs  search_test.rs  spellfix_result.rs
libplatune/management/src/sync/: dir_read.rs  mod.rs  progress_stream.rs  sync_controller.rs  sync_dal.rs  sync_engine.rs  sync_test.rs  tag.rs
libplatune/management/tests/: test.rs
libplatune/player/: Cargo.toml  Cross.toml  Dockerfile  Dockerfile.android  build.rs
libplatune/player/fuzz/: Cargo.toml  Makefile.toml  rust-toolchain.toml
libplatune/player/fuzz/fuzz_targets/: player.rs
libplatune/player/src/: audio_manager.rs  audio_output.rs  audio_processor.rs  channel_buffer.rs  context.rs  decoder.rs  enums.rs  event_loop.rs  http_stream_reader.rs  lib.rs  lib_test.rs  main.rs  mock_output.rs  output.rs  player.rs  player.udl  sink_actor.rs  source.rs  timer.rs  two_way_channel.rs  vec_ext.rs
libplatune/player/src/actors/: analyser.rs  decoder.rs  player.rs  request_handler.rs  song_queue.rs
libplatune/player/src/dto/: audio_status.rs  command.rs  current_position.rs  decoder_command.rs  decoder_error.rs  decoder_response.rs  mod.rs  player_event.rs  player_state.rs  player_status.rs  processor_error.rs  queue_source.rs  track.rs
libplatune/player/src/resolver/: mod.rs  url.rs  yt_dlp.rs
libplatune/player/src/settings/: mod.rs
libplatune/player/tests/: test.rs
libplayer/: Cargo.toml  Dockerfile
libplayer/src/: channels.rs  context.rs  lib.rs  player_backend.rs  servo_backend.rs  test.rs  util.rs
libplayer/src/actors/: decoder.rs  gstreamer_context.rs  mod.rs  player.rs  request_handler.rs  song_queue.rs
libplayer/tests/: test.rs
old/tui/: Cargo.toml
old/tui/src/: main.rs
platune-core/: Cargo.toml
platune-core/src/: audio_manager.rs  audio_processor.rs  decoder.rs  event_loop.rs  http_stream_reader.rs  lib.rs  lib2.rs  main.rs  output.rs  player.rs  source.rs  stereo_stream.rs  timer.rs  two_way_channel.rs
platune-core/src/dto/: audio_status.rs  command.rs  current_time.rs  mod.rs  player_event.rs  player_response.rs  player_status.rs  queue_source.rs
platune-core/src/settings/: mod.rs  resample_mode.rs
platune-tray/: Cargo.toml
platune-tray/src/: main.rs
platune-tui/: Cargo.toml
platune-tui/src/: main.rs
platuned/client/rust/: Cargo.toml  build.rs
platuned/client/rust/src/: lib.rs
platuned/client/rust/src/management/: v1.rs
platuned/server/: Cargo.toml  build.rs
platuned/server/src/: cert_gen.rs  ipc_stream.rs  lib.rs  main.rs  management.rs  player.rs  rpc.rs  server.rs  startup.rs  sync_handler.rs  sync_handler_builder.rs  sync_handler_client.rs  sync_processor.rs
platuned/server/src/services/: management.rs  mod.rs  player.rs
platuned/server/src/signal_handler/: mod.rs  unix.rs  windows.rs
platuned/server/src/unix/: mod.rs  unix_listener.rs  unix_stream.rs
platuned/server/src/windows/: service.rs
player/: Cargo.toml  Untitled Diagram.drawio  build.rs
player-old/: Cargo.toml  flow.drawio
player-old/src/: gstreamer_player_backend.rs  player_actor.rs  player_backend.rs  song_start_actor.rs
player/src/: audio_main.rs  dummy_player.rs  duration_updated_actor.rs  get_audio_data.rs  gstreamer_player_backend.rs  main.rs  main1.rs  player_actor.rs  player_backend.rs  player_rpc.proto  server.rs  song_queue_actor.rs  song_start_actor.rs  state_changed_actor.rs  test.rs  time.rs
player_client/: Cargo.toml  build.rs
player_client/proto/: player_rpc.proto
servo-player/: Cargo.toml  rust-toolchain
servo-player/src/: audio_node_wrapper.rs  context.rs  main.rs  media_element_node.rs  player_backend.rs  servo_backend.rs
servo-player/src/actors/: decoder.rs  player.rs  song_queue.rs
(+464 files in other folders)
