[workspace]
members = [
  "platuned/server",
  "platuned/client/rust",
  "libplatune/player",
  "libplatune/management",
  "platune-tray",
]
resolver = "3"

[workspace.dependencies]
axum = "0.8.7"
clap = "4.5.53"
console-subscriber = "0.5.0"
daemon-slayer = { git = "https://github.com/aschey/daemon-slayer", rev = "99d8c87b2b7f94c7136a54ae22b7d25cb079f17a" }
decal = { git = "https://github.com/aschey/decal", rev = "00dc0dd0dd76daed17e8574f2c3177a87d1a5a06" }
youtube_dl = { git = "https://github.com/aschey/youtube-dl-rs", rev = "9dbce3919b1f386fa8abe6c195f4ab4cb261523f" }
slite = { git = "https://github.com/aschey/slite", rev = "44fdd3e74b1f3ec58264bf6691a5039d98c29e72", default-features = false }
background-service = { git = "https://github.com/aschey/background-service-rs", rev = "6d9a1ddb2b57ac4fe305eff84545168d70171a5d" }
hls_client = { git = "https://github.com/Ovenoboyo/hls_client_rs", rev = "8ed92fe7a05c207779a79ddeb1154ce3fe512798", default-features = false }
directories = "6.0.0"
dotenvy = "0.15.7"
futures = "0.3.31"
futures-util = "0.3.31"
tipsy = "0.6.5"
prost = "0.14.1"
prost-types = "0.14.1"
rcgen = "0.14.6"
hyper-util = "0.1.19"
time = "0.3.44"
tokio = "1.48.0"
tokio-util = "0.7.17"
tokio-stream = "0.1.17"
tonic = "0.14"
tonic-build = "0.14"
tonic-health = "0.14"
tonic-reflection = "0.14"
tonic-prost = "0.14"
tonic-prost-build = "0.14"
tower = "0.5.2"
tower-http = "0.6.8"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
tracing-appender = "0.2.4"
uuid = "1.19.0"
vergen-gix = "1.0.9"
console = "0.16.2"
which = "8.0.0"
urlencoding = "2.1.3"
auto-launch = "0.5.0"
souvlaki = { version = "0.8.3", default-features = false }
global-hotkey = "0.7.0"
concread = { version = "0.5.7", default-features = false }
eyre = "0.6.12"
ignore = "0.4.25"
itertools = "0.14.0"
log = "0.4.29"
normpath = "1.5.0"
notify = { version = "8.2.0", default-features = false }
num_cpus = "1.17.0"
regex = "1.12.2"
rust-embed = "8.9.0"
sqlx = { version = "0.8", default-features = false }
strum = "0.27.2"
tap = "1.0.1"
thiserror = "2.0.17"
walkdir = "2.5.0"
async-trait = "0.1.89"
flume = "0.12.0"
lazy-regex = "3.4.2"
reqwest = { version = "0.12.26", default-features = false }
reqwest-middleware = "0.4.2"
reqwest-retry = "0.8.0"
stream-download = "0.22.9"
lofty = "0.22.4"
icy-metadata = "0.5.1"
pls = "0.2.3"

# testing dependencies
criterion = "0.8.1"
assert_matches = "1.5.0"
rstest = "0.26.1"
pretty_assertions = "1.4.1"
tempfile = "3.23.0"
spin_sleep = "1.3.3"
