[workspace]
members = [
  "platuned/server",
  "platuned/client/rust",
  "libplatune/player",
  "libplatune/management",
  "platune-tray",
]
resolver = "3"

[workspace.dependencies]
axum = "0.8.8"
clap = "4.5.54"
console-subscriber = "0.5.0"
daemon-slayer = { git = "https://github.com/aschey/daemon-slayer", rev = "c27d0be3829aaca9b8c78610236d831f8d672713" }
decal = { git = "https://github.com/aschey/decal", rev = "00dc0dd0dd76daed17e8574f2c3177a87d1a5a06" }
youtube_dl = { git = "https://github.com/aschey/youtube-dl-rs", rev = "9dbce3919b1f386fa8abe6c195f4ab4cb261523f" }
slite = { git = "https://github.com/aschey/slite", rev = "4125208834455947b9fa4df75040fa15bd7ba535", default-features = false }
background-service = { git = "https://github.com/aschey/background-service-rs", rev = "e932670ce7998022d8cf56a593f2e39c3c0362b5" }
hls_client = { git = "https://github.com/aschey/hls_client_rs", rev = "6b81fc82c3bb1e99b7880bbb1fc914770f65b294", default-features = false }
directories = "6.0.0"
dotenvy = "0.15.7"
futures = "0.3.31"
futures-util = "0.3.31"
tipsy = "0.6.5"
prost = "0.14.1"
prost-types = "0.14.1"
rcgen = "0.14.6"
hyper-util = "0.1.19"
time = "0.3.44"
tokio = "1.49.0"
tokio-util = "0.7.18"
tokio-stream = "0.1.18"
tonic = "0.14"
tonic-build = "0.14"
tonic-health = "0.14"
tonic-reflection = "0.14"
tonic-prost = "0.14"
tonic-prost-build = "0.14"
tower = "0.5.2"
tower-http = "0.6.8"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
tracing-appender = "0.2.4"
uuid = "1.19.0"
vergen-gix = "1.0.9"
console = "0.16.2"
which = "8.0.0"
urlencoding = "2.1.3"
auto-launch = "0.5.0"
souvlaki = { version = "0.8.3", default-features = false }
global-hotkey = "0.7.0"
concread = { version = "0.5.7", default-features = false }
eyre = "0.6.12"
ignore = "0.4.25"
itertools = "0.14.0"
log = "0.4.29"
normpath = "1.5.0"
notify = { version = "8.2.0", default-features = false }
num_cpus = "1.17.0"
regex = "1.12.2"
rust-embed = "8.9.0"
sqlx = { version = "0.8", default-features = false }
strum = "0.27.2"
tap = "1.0.1"
thiserror = "2.0.17"
walkdir = "2.5.0"
async-trait = "0.1.89"
flume = "0.12.0"
lazy-regex = "3.5.1"
reqwest = { version = "0.13.1", default-features = false }
reqwest-middleware = "0.5.0"
reqwest-retry = "0.9.0"
stream-download = "0.23.0"
lofty = "0.22.4"
icy-metadata = "0.6.0"
pls = "0.2.3"

# testing dependencies
criterion = "0.8.1"
assert_matches = "1.5.0"
rstest = "0.26.1"
pretty_assertions = "1.4.1"
tempfile = "3.24.0"
spin_sleep = "1.3.3"
