[package]
name = "platune"
version = "0.1.0"
authors = ["Austin Schey <aschey13@gmail.com>"]
edition = "2021"
build="build.rs"

[workspace]

[target.'cfg(not(target_os="windows"))'.dependencies]
pnet_datalink = "0.26.0"

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
actix-web = "2.0.0"
actix-cors = "0.2.0"
actix-service = "1.0.5"
actix-http = "1.0.1"
actix-rt = "1.0.0"
actix-files = "0.2.2"
actix-server = "1.0.2"
mime_guess = "2.0.1"
subprocess = "0.2.4"
fstrings = "0.2.2"
futures = "0.3.5"
dirs = "2.0.2"
diesel = { version = "1.4.4", features = ["sqlite"] }
diesel_migrations = "1.4.0"
paperclip = { git = "https://github.com/wafflespeanut/paperclip", rev = "90038bf", features = ["actix"] }
paperclip-actix = { git = "https://github.com/wafflespeanut/paperclip", rev = "90038bf" }
dotenv = "0.15.0"
sysinfo = "0.13.1"
itertools = "0.9.0"
failure = "0.1.7"
katatsuki = { git = "https://github.com/aschey/seiri", rev = "169b0b8" }
num_cpus = "1.13.0"
async-std = { version = "1.5.0", features = ["attributes"] }
image = "0.23.4"
color-thief = "0.2.1"
whoami = "0.9.0"
regex = "1.3.9"
anyhow = "1.0.32"
rust-embed = "6.3.0"