[package]
authors = ["aschey <aschey13@gmail.com>"]
name = "platune-core"
version = "0.1.0"

edition = "2021"

[lib]
name = "platune_core"
path = "src/lib.rs"

[features]

[dependencies]
anyhow = "1.0.51"
cpal = "0.13.4"
crossbeam-channel = "0.5.2"
dasp = {git = "https://github.com/RustAudio/dasp", rev = "66e8b83a5c926fde3ec7feab5dbe5982e6ce7b81", features = ["ring_buffer", "signal", "interpolate", "interpolate-sinc", "interpolate-linear"]}
futures-util = "0.3.19"
rb = "0.3.2"
reqwest = {version = "0.11.7", features = ["stream"]}
strum = "0.23.0"
symphonia = {git = "https://github.com/pdeljanov/Symphonia", rev = "9011735f1cbbb7d838aa59432033edf025454820", features = ["aac", "flac", "mp3", "isomp4", "wav", "ogg", "vorbis"]}
tempfile = "3.2.0"
tokio = {version = "1.15.0", features = ["rt-multi-thread", "macros"]}
tracing = "0.1.29"

[dev-dependencies]
