[package]
authors = ["aschey <aschey13@gmail.com>"]
name = "platune-core"
version = "0.1.0"

edition = "2021"

[lib]
name = "platune_core"
path = "src/lib.rs"

[features]

[dependencies]
anyhow = "1.0.51"
cpal = {git = "https://github.com/aschey/cpal", rev = "58d4ce76503d29ea65fff52bd11fdca42598e049"}
flume = "0.10.10"
futures-util = "0.3.19"
rb = {git = "https://github.com/aschey/rb", rev = "9b570a20422a5e659c631ff2616a4fa1d3d1ce76"}
reqwest = {version = "0.11.7", features = ["stream"]}
rubato = {git = "https://github.com/HEnquist/rubato", rev = "a2916abd5446cc9ec6e3b56dff793886ee987b70"}
strum = "0.23.0"
symphonia = {git = "https://github.com/pdeljanov/Symphonia", rev = "9011735f1cbbb7d838aa59432033edf025454820", features = ["aac", "flac", "mp3", "isomp4", "wav", "ogg", "vorbis"]}
tempfile = "3.2.0"
tokio = {version = "1.15.0", features = ["rt-multi-thread", "macros"]}
tracing = "0.1.29"

[dev-dependencies]
