[package]
name = "platune-tray"
version = "0.1.0"
edition = "2024"

[dependencies]
daemon-slayer = { workspace = true, features = ["tray", "client"] }
tokio = { workspace = true, features = ["rt-multi-thread", "sync"] }
souvlaki = { workspace = true, default-features = false, features = [
  "use_zbus",
] }
platuned-client = { path = "../platuned/client/rust" }
tipsy = { workspace = true }
futures-util = { workspace = true }
global-hotkey = { workspace = true }

[package.metadata.packager]
before-packaging-command = "cargo build --release"
product-name = "Platune Tray"
identifier = "com.platune.tray"
resources = ["Cargo.toml", "src", "icon.png"]
icons = ["icon.png"]
