[package]
authors = ["aschey <aschey13@gmail.com>"]
edition = "2018"
name = "platune-tui"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1.4"
crossterm = "0.19.0"
tui = {version = "0.15.0", features = ["crossterm"], default-features = false}
viuer = "0.4.0"
