[package]
name = "player"
version = "0.1.0"
authors = ["Austin Schey <aschey13@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
act-zero = "0.4.0"
async-timer = { version= "1.0.0-beta.7", features=["tokio1", "c_wrapper", "std"] }
byte-slice-cast = "1.0.0"
flexi_logger = "0.17.1"
futures = "0.3.12"
generic-array = "0.14.4"
gstreamer = "0.16.5"
gstreamer-app = "0.16.5"
gstreamer-audio = "0.16.5"
gstreamer-player = "0.16.5"
lazy_static = "1.4.0"
log = "0.4.14"
tokio = { version="1.1.1", features=["full"] }
yansi = "0.5.0"
zerocopy = "0.3.0"
