[package]
name = "player"
version = "0.1.0"
authors = ["Austin Schey <aschey13@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byte-slice-cast = "1.0.0"
gstreamer = "0.16.5"
gstreamer-app = "0.16.5"
gstreamer-audio = "0.16.5"
gstreamer-player = "0.16.5"
lazy_static = "1.4.0"
tokio = { version="1.1.1", features=["full"] }
