[package]
name = "player"
version = "0.1.0"
authors = ["aschey <aschey13@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version="1.2.0", features=["full"]}
flexi_logger = "0.17.1"
yansi = "0.5.0"
platune-libplayer = {path = "../libplayer", features=["runtime-tokio"]}
log = "0.4.14"
jsonrpc-core = "17.0.0"
jsonrpc-ipc-server = "17.0.1"
jsonrpc-derive = "17.0.0"
jsonrpc-core-client = "17.0.0"
