[package]
name = "servo-player"
version = "0.1.0"
authors = ["aschey <aschey13@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
servo-media = { git = "https://github.com/servo/media", rev = "b23e722" }
servo-media-audio = { git = "https://github.com/servo/media", rev = "b23e722" }
servo-media-auto = { git = "https://github.com/servo/media", rev = "b23e722" }
flexi_logger = "0.17.1"
yansi = "0.5.0"
lazy_static = "1.4.0"
log = "0.4.14"
tokio = { version="1.1.1", features=["full"] }
gstreamer = "0.15"
gstreamer-audio = "0.15"