[package]
authors = ["Austin Schey <aschey13@gmail.com>"]
edition = "2021"
name = "libplatune-management"
version = "0.1.0"

[lib]
name = "libplatune_management"
path = "src/lib.rs"

[[bench]]
harness = false
name = "bench"

[dependencies]
concread = { version = "0.5", default-features = false, features = [
    "arcache",
    "arcache-is-hashtrie",
] }
directories = "5"
eyre = "0.6"
futures = "0.3"
ignore = "0.4"
itertools = "0.13"
lazy_static = "1"
lofty = "0.21.1"
log = "0.4"
normpath = "1"
notify = { version = "6", default-features = false, features = [
    "macos_fsevent",
] }
num_cpus = "1"
regex = "1"
rust-embed = "8"
slite = { git = "https://github.com/aschey/slite", rev = "0809a9e913183f0d784aa24416e0af08a440eb3b", default-features = false, features = [
    "read-files",
] }
sqlx = { version = "0.8", default-features = false, features = [
    "sqlite",
    "any",
    "macros",
    "runtime-tokio",
] }
daemon-slayer = { git = "https://github.com/aschey/daemon-slayer", rev = "67e253fde032e626833230d14a86a172c805cec6", features = [
    "native-notification",
] }
strum = { version = "0.26", features = ["derive"] }
tap = "1"
thiserror = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tokio-stream = { version = "0.1", features = ["net", "sync"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }
walkdir = "2"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["async_tokio"] }
ctor = "0.2.8"
pretty_assertions = "1.4.0"
rstest = "0.22.0"
tempfile = "3.10.1"
tracing-subscriber = "0.3.18"
