[package]
authors = ["Austin Schey <aschey13@gmail.com>"]
edition = "2024"
name = "libplatune-management"
version = "0.1.0"

[lib]
name = "libplatune_management"
path = "src/lib.rs"

[[bench]]
harness = false
name = "bench"

[dependencies]
concread = { workspace = true, default-features = false, features = [
  "arcache",
  "arcache-is-hashtrie",
] }
directories = { workspace = true }
eyre = { workspace = true }
futures = { workspace = true }
ignore = { workspace = true }
itertools = { workspace = true }
lofty = { workspace = true }
log = { workspace = true }
normpath = { workspace = true }
notify = { workspace = true, default-features = false, features = [
  "macos_fsevent",
] }
num_cpus = { workspace = true }
regex = { workspace = true }
rust-embed = { workspace = true }
slite = { workspace = true, default-features = false, features = [
  "read-files",
] }
sqlx = { workspace = true, default-features = false, features = [
  "sqlite",
  "any",
  "macros",
  "runtime-tokio",
] }
strum = { workspace = true, features = ["derive"] }
tap = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tokio-stream = { workspace = true, features = ["net", "sync"] }
tracing = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
walkdir = { workspace = true }

[dev-dependencies]
criterion = { workspace = true, features = ["async_tokio"] }
ctor = { workspace = true }
pretty_assertions = { workspace = true }
rstest = { workspace = true }
tempfile = { workspace = true }
tracing-subscriber = { workspace = true }
