[package]
authors = ["aschey <aschey13@gmail.com>"]
name = "libplatune-player"
version = "0.1.0"

edition = "2024"

[lib]
name = "libplatune_player"
path = "src/lib.rs"

[dependencies]
derivative = "2"
eyre = "0.6"
flume = "0.11"
futures-util = "0.3"
tokio-util = "0.7"
stream-download = { version = "0.16.1", features = [
  "reqwest-rustls",
  "reqwest-middleware",
  "registry",
  "process",
] }
strum = { version = "0.27", features = ["derive"] }
tap = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1"
decal = { git = "https://github.com/aschey/decal", rev = "c042e87c72aab3375bb5e9e06e6614497bceb4f9" }
reqwest-retry = "0.7.0"
# The default-tls feature seems to break mtls client auth in some cases
reqwest = { version = "0.12", default-features = false, features = [
  "charset",
  "http2",
  "macos-system-configuration",
  "rustls-tls-native-roots",
] }
reqwest-middleware = "0.4.1"
async-trait = "0.1"
youtube_dl = { git = "https://github.com/aschey/youtube-dl-rs", rev = "2a2533633ad2d6d718baf63e25b9b7d7c2a053d1", features = [
  "tokio",
] }
regex = "1.11.1"
lazy-regex = "3.4.1"
which = { version = "7.0.2", features = ["tracing"] }

[dev-dependencies]
assert_matches = "1.5.0"
async-trait = "0.1.88"
ctor = "0.4.1"
futures = "0.3.31"
pretty_assertions = "1.4.1"
rstest = "0.25.0"
spin_sleep = "1.3.1"
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.19"
