[package]
authors = ["aschey <aschey13@gmail.com>"]
name = "libplatune-player"
version = "0.1.0"

edition = "2024"

[lib]
name = "libplatune_player"
path = "src/lib.rs"

[dependencies]
derivative = "2"
eyre = { workspace = true }
flume = { workspace = true }
futures-util = { workspace = true }
tokio-util = { workspace = true }
stream-download = { workspace = true, features = [
  "reqwest-rustls",
  "reqwest-middleware",
  "registry",
  "process",
] }
strum = { workspace = true, features = ["derive"] }
tap = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tracing = { workspace = true }
decal = { workspace = true, features = [
  "decoder-fdk-aac",
  "decoder-libopus",
  "decoder-simd",
] }
reqwest-retry = { workspace = true }
# The default-tls feature seems to break mtls client auth in some cases
reqwest = { workspace = true, default-features = false, features = [
  "charset",
  "http2",
  "macos-system-configuration",
  "rustls-tls-native-roots",
] }
reqwest-middleware = { workspace = true }
async-trait = { workspace = true }
youtube_dl = { workspace = true, features = ["tokio"] }
regex = { workspace = true }
lazy-regex = { workspace = true }
which = { workspace = true, features = ["tracing"] }
icy-metadata = { workspace = true }

[dev-dependencies]
assert_matches = { workspace = true }
async-trait = { workspace = true }
ctor = { workspace = true }
futures = { workspace = true }
pretty_assertions = { workspace = true }
rstest = { workspace = true }
spin_sleep = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }
