[package]
authors = ["aschey <aschey13@gmail.com>"]
edition = "2021"
name = "platune-tui"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1.7"
crossterm = "0.23.2"
tui = { version = "0.17.0", features = ["crossterm"], default-features = false }

[target.'cfg(windows)'.dependencies]
viuer = "0.6.0"

[target.'cfg(not(windows))'.dependencies.viuer]
features = ["sixel"]
version = "0.6.0"
