[package]
authors = ["aschey <aschey13@gmail.com>"]
edition = "2024"
name = "platuned"
version = "0.1.0"

[lib]
path = "src/lib.rs"

[dependencies]
axum = { version = "0.8.1", optional = true }
clap = { version = "4.5.32", features = ["unstable-styles"] }
console-subscriber = { version = "0.4.1", features = [
  "parking_lot",
], optional = true }
daemon-slayer = { git = "https://github.com/aschey/daemon-slayer", rev = "35e0f9bc24d3c258c7e81531ff252bfedc973712", features = [
  "client-standard",
  "server-standard",
  "notify",
  "grpc-health-check",
  "logging-ipc",
  "native-notification",
  "build-info",
] }
directories = "6.0.0"
dotenvy = "0.15.7"
futures = "0.3.31"
libplatune-management = { path = "../../libplatune/management", optional = true }
libplatune-player = { path = "../../libplatune/player", optional = true }
tipsy = "0.3.2"
prost = "0.13.5"
prost-types = "0.13.5"
rcgen = { version = "0.13.2", features = ["x509-parser", "pem"] }
time = "0.3.40"
tokio = { version = "1.44.1", features = ["rt-multi-thread", "macros"] }
tokio-stream = { version = "0.1.17", features = ["net"] }
tonic = { version = "0.12.3", features = ["tls"] }
tonic-health = "0.12.3"
tonic-reflection = "0.12.3"
tower = { version = "0.5.2", optional = true }
tower-http = { version = "0.6.2", features = ["fs"], optional = true }
tracing = "0.1.41"
uuid = { version = "1.16.0", features = ["v4"] }
vergen-gix = { version = "1.0.6" }
console = "0.15.11"
which = { version = "7.0.2", features = ["tracing"] }

[features]
default = ["management", "player"]
management = ["libplatune-management", "tower", "tower-http", "axum"]
player = ["libplatune-player"]
tokio-console = ["console-subscriber", "tokio/tracing"]

[build-dependencies]
tonic-build = { version = "0.12.3", features = ["prost"] }
vergen-gix = { version = "1.0.6", features = ["build", "cargo", "rustc", "si"] }
