[package]
authors = ["aschey <aschey13@gmail.com>"]
edition = "2024"
name = "platuned"
version = "0.1.0"

[lib]
path = "src/lib.rs"

[dependencies]
axum = { version = "0.8.3", optional = true }
clap = { version = "4.5.36", features = ["unstable-styles"] }
console-subscriber = { version = "0.4.1", features = [
  "parking_lot",
], optional = true }
daemon-slayer = { git = "https://github.com/aschey/daemon-slayer", rev = "c88fe52685d66fda9cee772bdea71054c9ab11b9", features = [
  "client-standard",
  "server-standard",
  "notify",
  "grpc-health-check",
  "logging-ipc",
  "native-notification",
  "build-info",
] }
directories = "6.0.0"
dotenvy = "0.15.7"
futures = "0.3.31"
libplatune-management = { path = "../../libplatune/management", optional = true }
libplatune-player = { path = "../../libplatune/player", optional = true }
tipsy = "0.4.0"
prost = "0.13.5"
prost-types = "0.13.5"
rcgen = { version = "0.13.2", features = ["x509-parser", "pem"] }
time = "0.3.41"
tokio = { version = "1.44.2", features = ["rt-multi-thread", "macros"] }
tokio-stream = { version = "0.1.17", features = ["net"] }
tonic = { version = "0.13.0", features = ["tls-aws-lc"] }
tonic-health = "0.13.0"
tonic-reflection = "0.13.0"
tower = { version = "0.5.2", optional = true }
tower-http = { version = "0.6.2", features = ["fs"], optional = true }
tracing = "0.1.41"
uuid = { version = "1.16.0", features = ["v4"] }
vergen-gix = { version = "1.0.9" }
console = "0.15.11"
which = { version = "7.0.3", features = ["tracing"] }
urlencoding = "2.1.3"
auto-launch = "0.5.0"

[features]
default = ["management", "player"]
management = ["libplatune-management", "tower", "tower-http", "axum"]
player = ["libplatune-player"]
tokio-console = ["console-subscriber", "tokio/tracing"]

[build-dependencies]
tonic-build = { version = "0.13.0", features = ["prost"] }
vergen-gix = { version = "1.0.9", features = ["build", "cargo", "rustc", "si"] }
