[package]
authors = ["aschey <aschey13@gmail.com>"]
edition = "2024"
name = "platuned"
version = "0.1.0"

[lib]
path = "src/lib.rs"

[dependencies]
axum = { workspace = true, optional = true }
clap = { workspace = true, features = ["unstable-styles"] }
console-subscriber = { workspace = true, features = [
  "parking_lot",
], optional = true }
daemon-slayer = { workspace = true, features = [
  "client-standard",
  "server-standard",
  "notify",
  "grpc-health-check",
  "logging-ipc",
  "native-notification",
  "build-info",
] }
directories = { workspace = true }
dotenvy = { workspace = true }
futures = { workspace = true }
libplatune-management = { path = "../../libplatune/management", optional = true }
libplatune-player = { path = "../../libplatune/player", optional = true }
tipsy = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
rcgen = { workspace = true, features = ["x509-parser", "pem"] }
time = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tokio-stream = { workspace = true, features = ["net"] }
tokio-util = { workspace = true }
tonic = { workspace = true, features = ["tls-aws-lc"] }
tonic-prost = { workspace = true }
tonic-health = { workspace = true }
tonic-reflection = { workspace = true }
tower = { workspace = true, optional = true }
tower-http = { workspace = true, features = ["fs"], optional = true }
tracing = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
vergen-gix = { workspace = true }
console = { workspace = true }
which = { workspace = true, features = ["tracing"] }
urlencoding = { workspace = true }
auto-launch = { workspace = true }
tap = { workspace = true }

[features]
default = ["management", "player"]
management = ["libplatune-management", "tower", "tower-http", "axum"]
player = ["libplatune-player"]
tokio-console = ["console-subscriber", "tokio/tracing"]

[build-dependencies]
tonic-build = { workspace = true }
tonic-prost-build = { workspace = true }
vergen-gix = { workspace = true, features = ["build", "cargo", "rustc", "si"] }
