[package]
authors = ["aschey <aschey13@gmail.com>"]
edition = "2024"
name = "platuned-client"
version = "0.1.0"

[lib]
name = "platuned_client"
path = "src/lib.rs"

[dependencies]
tipsy = "0.3.2"
hyper-util = "0.1.10"
prost = "0.13.5"
prost-types = "0.13.5"
tonic = "0.12.3"
tower = { version = "0.5.2", features = ["util"] }

[build-dependencies]
tonic-build = { version = "0.12", features = ["prost"] }
