[package]
authors = ["aschey <aschey13@gmail.com>"]
edition = "2024"
name = "platuned-client"
version = "0.1.0"

[lib]
name = "platuned_client"
path = "src/lib.rs"

[dependencies]
tipsy = "0.4.1"
hyper-util = "0.1.11"
prost = "0.13.5"
prost-types = "0.13.5"
tonic = "0.13.1"
tower = { version = "0.5.2", features = ["util"] }

[build-dependencies]
tonic-build = { version = "0.13.1", features = ["prost"] }
