[package]
authors = ["aschey <aschey13@gmail.com>"]
edition = "2024"
name = "platuned-client"
version = "0.1.0"

[lib]
name = "platuned_client"
path = "src/lib.rs"

[dependencies]
tipsy = { workspace = true }
hyper-util = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
tonic = { workspace = true }
tower = { workspace = true, features = ["util"] }

[build-dependencies]
tonic-build = { workspace = true, features = ["prost"] }
